fix overflow tareas

--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,8 @@
 .listStyle{
     list-style: none;
     padding: 0;
+    height: 13.125rem;
+    overflow: auto;
 }
 
 .taskButton{
